--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "canvas": "^2.11.2"
+    "canvas": "^2.11.2",
+    "preinstall": "apt-get install -y libcairo2-dev libjpeg-dev libpango1.0-dev libgif-dev build-essential g++"
+
   }
 }
