--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "dependencies": {
-    "canvas": "^2.11.2",
+  "scripts": {
     "preinstall": "apt-get install -y libcairo2-dev libjpeg-dev libpango1.0-dev libgif-dev build-essential g++"
-
+  },
+  "dependencies": {
+    "canvas": "^2.11.2"
   }
 }
